syntax = "proto3";

package survey;
option go_package = ".;gen";

service SurveyService {
  rpc GetSurveyById(GetSurveyByIdRequest) returns (GetSurveyByIdResponce) {}
  rpc CreateSurvey(CreateSurveyRequest) returns (CreateSurveyResponce) {}
  rpc GetSurveyStatsBySurveyId(GetSurveyStatsBySurveyIdRequest) returns (GetSurveyStatsBySurveyIdResponce) {}
  rpc GetSurveyStatsByUserId(GetSurveyStatsByUserIdRequest) returns (GetSurveyStatsByUserIdResponce) {}
}

message GetSurveyByIdRequest {
  uint32 id = 1;
}

message Survey {
  uint32 id = 1;
  string survey_text = 2;
  uint32 max_rating = 3;
}

message SurveyResponce {
  uint32 survey_id = 1;
  uint32 user_id = 2;
  string description = 3;
  uint32 rating = 4;
}
message GetSurveyByIdResponce {
  Survey survey = 1;
}

message CreateSurveyRequest {
  SurveyResponce serveyResponce = 1;
}

message CreateSurveyResponce {
  bool success = 1;
}

message SurveyStatsBySurvey {
  uint32 servey_id = 1;
  string servey_text = 2;
  float  avg_rating = 3;
  map<int32, int32> ratings_count = 4;
}

message GetSurveyStatsBySurveyIdRequest {
  uint32 id = 1;
}

message GetSurveyStatsBySurveyIdResponce {
  SurveyStatsBySurvey surveyStatsBySurvey = 1;
}

message UserSurveyStats {
  uint32 servey_id = 1;
  string servey_text = 2;
  bool answered = 3;
}

message GetSurveyStatsByUserIdRequest {
  uint32 userId = 1;
}

message GetSurveyStatsByUserIdResponce {
  repeated UserSurveyStats userServeyStats = 1;
}
